GG-304 Adjusting for external fields. (#364)